# omr

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakelists.txt  GNUmakefile  README.md  configure  configure.ac  omrcfg.CMakeTemplate.h  omrversionstrings.CMakeTemplate.h
cmake/: config.cmake  platform.cmake
cmake/caches/: GcExperimentalApi.cmake
compiler/compile/: Compilation.hpp  OMRCompilation.cpp  OMRCompilation.hpp
compiler/control/: CompileMethod.cpp  CompileMethod.hpp  OMROptions.cpp  OMROptions.hpp
compiler/ilgen/: BytecodeBuilder.cpp  BytecodeBuilder.hpp  BytecodeBuilderRecorder.cpp  BytecodeBuilderRecorder.hpp  CMakeLists.txt  IlBuilder.cpp  IlBuilder.hpp  IlBuilderRecorder.cpp  IlBuilderRecorder.hpp  IlValue.cpp  IlValue.hpp  JitBuilderRecorder.cpp  JitBuilderRecorder.hpp  JitBuilderRecorderBinaryBuffer.cpp  JitBuilderRecorderBinaryBuffer.hpp  JitBuilderRecorderBinaryFile.cpp  JitBuilderRecorderBinaryFile.hpp  JitBuilderRecorderTextFile.cpp  JitBuilderRecorderTextFile.hpp  JitBuilderReplay.cpp  JitBuilderReplay.hpp  JitBuilderReplayTextFile.cpp  JitBuilderReplayTextFile.hpp  MethodBuilder.cpp  MethodBuilder.hpp  MethodBuilderRecorder.cpp  MethodBuilderRecorder.hpp  MethodBuilderReplay.cpp  MethodBuilderReplay.hpp  TypeDictionary.cpp  TypeDictionary.hpp
compiler/x/codegen/: OMRTreeEvaluator.cpp
ddr/lib/ddr-scanner/dwarf/: AixSymbolTableParser.cpp
example/: CMakeLists.txt  gcmain.cpp  makefile
example/glue/: CMakeLists.txt  MarkingDelegate.hpp  MixedObjectScanner.hpp  Object.hpp  ObjectAllocationModel.hpp  ObjectIterator.hpp  ObjectModel.cpp  ObjectModel.hpp  ObjectModelDelegate.hpp  ScavengerDelegate.cpp  objectdescription.h
example/include/: Object.hpp  ObjectModelDelegate.hpp
example/include/OMRClient/GC/: ObjectScanner.hpp
fvtest/: CMakeLists.txt
fvtest/algotest/: CMakeLists.txt  makefile
fvtest/compilertest/ilgen/: MethodBuilder.hpp
fvtest/gctest/: CMakeLists.txt  GCConfigTest.cpp  GCConfigTest.hpp  TestCopyForwardRegionLookupTable.cpp  makefile
fvtest/omrGtestGlue/: CMakeLists.txt
fvtest/porttest/: CMakeLists.txt  makefile  omrstrTest.cpp
fvtest/rastest/: rastest_include.mk
fvtest/sigtest/: CMakeLists.txt
fvtest/threadextendedtest/: makefile
fvtest/threadtest/: CMakeLists.txt  abortTest.cpp  createTest.cpp  makefile
fvtest/util/: CMakeLists.txt
fvtest/utiltest/: CMakeLists.txt
fvtest/vmtest/: makefile
gc/: CMakeLists.txt
gc/api/: CMakeLists.txt
gc/api/glue/: CompactDelegate.cpp  CompactDelegate.hpp  CompactSchemeFixupObject.hpp  EnvironmentDelegate.cpp  ScavengerBackOutScanner.hpp  ScavengerRootScanner.hpp
gc/api/include/OMR/: IntrusiveList.hpp
gc/api/include/OMR/GC/: AccessBarrier.hpp  LocalHeapCache.hpp  RefSlotHandle.hpp  ScavengingFn.hpp  System.hpp
gc/api/src/: OMR_GC_System.cpp
gc/api/test/: CMakeLists.txt  TestIntrusiveList.cpp
gc/base/: EnvironmentBase.hpp  GCExtensionsBase.hpp  IndexableObjectScanner.hpp  LightweightNonReentrantReaderWriterLock.cpp  MarkingScheme.cpp  MarkingScheme.hpp  ModronAssertions.cpp  ModronAssertions.h  ObjectModelBase.hpp  SlotObject.hpp  StartupManager.cpp  omrmmprivate.hdf
gc/base/segregated/: FreeHeapRegionList.hpp
gc/base/standard/: CompactScheme.hpp  ConfigurationGenerational.cpp  CopyScanCacheChunk.cpp  CopyScanCacheStandard.hpp  ParallelGlobalGC.cpp  Scavenger.cpp  Scavenger.hpp
gc/base/vlhgc/: CopyForwardRegionLookupTable.cpp  CopyForwardRegionLookupTable.hpp  HeapRegionStateTable.hpp
gc/include/: omrmm.hdf
gc/structs/: ForwardedHeader.cpp
glue/: CMakeLists.txt
imperium/: CMakeLists.txt
imperium/client/: CMakeLists.txt  imperium_client.cc  main.cpp  omr_client.cc
imperium/imperium/: CMakeLists.txt
imperium/imperium/include/imperium/: imperium.hpp
imperium/imperium/protos/: imperium.proto  omr.proto
imperium/imperium/src/: imperium.cpp
imperium/server/: CMakeLists.txt  imperium_server.cc  main.cpp  omr_server.cc
include_core/: omrcfg.h.in  omrgctypes.h  omrthread_generated.h
jitbuilder/control/: Jit.cpp
jitbuilder/release/: CMakeLists.txt
jitbuilder/release/include/: Jit.hpp
jitbuilder/release/src/: IterativeFib.cpp  IterativeFib.hpp  Mandelbrot.cpp  Mandelbrot.hpp  MatMult.cpp  OperandArrayTests.cpp  RecursiveFib.cpp  RecursiveFib.hpp  Simple.cpp  Simple.hpp
omr/: CMakeLists.txt
omrmakefiles/: configure.mk.in
omrsigcompat/: CMakeLists.txt
omrtrace/: CMakeLists.txt
perftest/gctest/: makefile
port/: CMakeLists.txt
port/common/: omrstr.c
scripts/: build-on-travis.sh
thread/: CMakeLists.txt
tools/: CMakeLists.txt
tools/hookgen/: CMakeLists.txt  HookGen.cpp
tools/tracegen/: ArgParser.cpp  CMakeLists.txt  TDFTypes.hpp  TraceGen.cpp
tools/tracemerge/: CMakeLists.txt
util/: CMakeLists.txt
util/avl/: CMakeLists.txt
util/hashtable/: CMakeLists.txt
util/hookable/: CMakeLists.txt
util/omrutil/: CMakeLists.txt
util/pool/: CMakeLists.txt
