project(libomrgc VERSION 0.0.1 LANGUAGES CXX)


add_hookgen(include/omrmm.hdf
	${CMAKE_CURRENT_SOURCE_DIR}/../include_core/mmomrhook.h
	${CMAKE_CURRENT_SOURCE_DIR}/base/mmomrhook_internal.h
)
add_hookgen(base/omrmmprivate.hdf
	${CMAKE_CURRENT_SOURCE_DIR}/base/mmprivatehook.h
	${CMAKE_CURRENT_SOURCE_DIR}/base/mmprivatehook_internal.h
)

add_tracegen(base/j9mm.tdf)
add_tracegen(base/omrmm.tdf)
add_tracegen(verbose/j9vgc.tdf)

add_library(omrgc
		base/AddressOrderedListPopulator.cpp
		base/AddressOrderedListPopulator.hpp
		base/AllocateDescription.hpp
		base/AllocateInitialization.hpp
		base/AllocationContext.cpp
		base/AllocationContext.hpp
		base/AllocationInterfaceGeneric.cpp
		base/AllocationInterfaceGeneric.hpp
		base/ArrayObjectModel.hpp
		base/AtomicOperations.hpp
		base/Base.hpp
		base/BaseNonVirtual.hpp
		base/BaseVirtual.cpp
		base/BaseVirtual.hpp
		base/Bits.hpp
		base/BumpAllocatedListPopulator.cpp
		base/BumpAllocatedListPopulator.hpp
		base/CardCleaner.hpp
		base/CardTable.cpp
		base/CardTable.hpp
		base/Collector.cpp
		base/Collector.hpp
		base/CollectorLanguageInterface.cpp
		base/CollectorLanguageInterface.hpp
		base/ConcurrentSafepointCallback.hpp
		base/Configuration.cpp
		base/Configuration.hpp
		base/ConfigurationLanguageInterface.hpp
		base/CopyScanCache.cpp
		base/CopyScanCache.hpp
		base/CycleState.cpp
		base/CycleState.hpp
		base/Debug.hpp
		base/Dispatcher.cpp
		base/Dispatcher.hpp
		base/EmptyListPopulator.cpp
		base/EmptyListPopulator.hpp
		base/EnvironmentBase.cpp
		base/EnvironmentBase.hpp
		base/EnvironmentLanguageInterface.cpp
		base/EnvironmentLanguageInterface.hpp
		base/Forge.cpp
		base/Forge.hpp
		base/GCCode.cpp
		base/GCCode.hpp
		base/GCExtensionsBase.cpp
		base/GCExtensionsBase.hpp
		base/GlobalAllocationManager.cpp
		base/GlobalAllocationManager.hpp
		base/GlobalCollector.cpp
		base/GlobalCollector.hpp
		base/Heap.cpp
		base/Heap.hpp
		base/HeapLinkedFreeHeader.hpp
		base/HeapMap.cpp
		base/HeapMap.hpp
		base/HeapMapIterator.cpp
		base/HeapMapIterator.hpp
		base/HeapMapWordIterator.hpp
		base/HeapMemorySubSpaceIterator.cpp
		base/HeapMemorySubSpaceIterator.hpp
		base/HeapRegionDescriptor.cpp
		base/HeapRegionDescriptor.hpp
		base/HeapRegionIterator.cpp
		base/HeapRegionIterator.hpp
		base/HeapRegionList.hpp
		base/HeapRegionManager.cpp
		base/HeapRegionManager.hpp
		base/HeapRegionManagerTarok.cpp
		base/HeapRegionManagerTarok.hpp
		base/HeapSplit.cpp
		base/HeapSplit.hpp
		base/HeapVirtualMemory.cpp
		base/HeapVirtualMemory.hpp
		base/InitializationParameters.hpp
		base/LightweightNonReentrantLock.cpp
		base/LightweightNonReentrantLock.hpp
		base/LightweightNonReentrantReaderWriterLock.cpp
		base/LightweightNonReentrantReaderWriterLock.hpp
		base/Lock.hpp
		base/MarkMap.cpp
		base/MarkMap.hpp
		base/MarkedObjectPopulator.cpp
		base/MarkedObjectPopulator.hpp
		base/MarkingScheme.cpp
		base/MarkingScheme.hpp
		base/MasterGCThread.cpp
		base/MasterGCThread.hpp
		base/Math.cpp
		base/Math.hpp
		base/MemoryHandle.hpp
		base/MemoryManager.cpp
		base/MemoryManager.hpp
		base/MemoryPool.cpp
		base/MemoryPool.hpp
		base/MemoryPoolAddressOrderedList.cpp
		base/MemoryPoolAddressOrderedList.hpp
		base/MemoryPoolAddressOrderedListBase.cpp
		base/MemoryPoolAddressOrderedListBase.hpp
		base/MemoryPoolBumpPointer.cpp
		base/MemoryPoolBumpPointer.hpp
		base/MemoryPoolHybrid.cpp
		base/MemoryPoolHybrid.hpp
		base/MemoryPoolLargeObjects.cpp
		base/MemoryPoolLargeObjects.hpp
		base/MemoryPoolSplitAddressOrderedList.cpp
		base/MemoryPoolSplitAddressOrderedList.hpp
		base/MemoryPoolSplitAddressOrderedListBase.cpp
		base/MemoryPoolSplitAddressOrderedListBase.hpp
		base/MemorySpace.cpp
		base/MemorySpace.hpp
		base/MemorySubSpace.cpp
		base/MemorySubSpace.hpp
		base/MemorySubSpaceChildIterator.cpp
		base/MemorySubSpaceChildIterator.hpp
		base/MemorySubSpaceFlat.cpp
		base/MemorySubSpaceFlat.hpp
		base/MemorySubSpaceGenerational.cpp
		base/MemorySubSpaceGenerational.hpp
		base/MemorySubSpaceGeneric.cpp
		base/MemorySubSpaceGeneric.hpp
		base/MemorySubSpacePoolIterator.cpp
		base/MemorySubSpacePoolIterator.hpp
		base/MemorySubSpaceRegionIterator.cpp
		base/MemorySubSpaceRegionIterator.hpp
		base/MemorySubSpaceSemiSpace.cpp
		base/MemorySubSpaceSemiSpace.hpp
		base/MemorySubSpaceUniSpace.cpp
		base/MemorySubSpaceUniSpace.hpp
		base/NUMAManager.cpp
		base/NUMAManager.hpp
		base/NonVirtualMemory.cpp
		base/NonVirtualMemory.hpp
		base/OMRVMInterface.cpp
		base/OMRVMInterface.hpp
		base/OMRVMThreadInterface.cpp
		base/OMRVMThreadInterface.hpp
		base/ObjectAllocationInterface.cpp
		base/ObjectAllocationInterface.hpp
		base/ObjectHeapBufferedIterator.cpp
		base/ObjectHeapBufferedIterator.hpp
		base/ObjectHeapBufferedIteratorPopulator.hpp
		base/ObjectHeapIteratorAddressOrderedList.cpp
		base/ObjectHeapIteratorAddressOrderedList.hpp
		base/ObjectMap.cpp
		base/ObjectMap.hpp
		base/ObjectModelBase.hpp
		base/Packet.cpp
		base/Packet.hpp
		base/PacketList.cpp
		base/PacketList.hpp
		base/ParallelDispatcher.cpp
		base/ParallelDispatcher.hpp
		base/ParallelMarkTask.cpp
		base/ParallelMarkTask.hpp
		base/ParallelSweepChunk.cpp
		base/ParallelSweepChunk.hpp
		base/ParallelTask.cpp
		base/ParallelTask.hpp
		base/PhysicalArena.cpp
		base/PhysicalArena.hpp
		base/PhysicalArenaRegionBased.cpp
		base/PhysicalArenaRegionBased.hpp
		base/PhysicalArenaVirtualMemory.cpp
		base/PhysicalArenaVirtualMemory.hpp
		base/PhysicalSubArena.cpp
		base/PhysicalSubArena.hpp
		base/PhysicalSubArenaRegionBased.cpp
		base/PhysicalSubArenaRegionBased.hpp
		base/PhysicalSubArenaVirtualMemory.cpp
		base/PhysicalSubArenaVirtualMemory.hpp
		base/PhysicalSubArenaVirtualMemoryFlat.cpp
		base/PhysicalSubArenaVirtualMemoryFlat.hpp
		base/ReferenceChainWalkerMarkMap.cpp
		base/ReferenceChainWalkerMarkMap.hpp
		base/RegionPool.cpp
		base/RegionPool.hpp
		base/RegionPoolGeneric.cpp
		base/RegionPoolGeneric.hpp
		base/SlotObject.hpp
		base/StartupManager.cpp
		base/StartupManager.hpp
		base/SweepHeapSectioning.cpp
		base/SweepHeapSectioning.hpp
		base/SweepPoolManager.cpp
		base/SweepPoolManager.hpp
		base/SweepPoolManagerAddressOrderedList.cpp
		base/SweepPoolManagerAddressOrderedList.hpp
		base/SweepPoolManagerAddressOrderedListBase.cpp
		base/SweepPoolManagerAddressOrderedListBase.hpp
		base/SweepPoolManagerHybrid.cpp
		base/SweepPoolManagerHybrid.hpp
		base/SweepPoolManagerSplitAddressOrderedList.cpp
		base/SweepPoolManagerSplitAddressOrderedList.hpp
		base/SweepPoolState.cpp
		base/SweepPoolState.hpp
		base/TLHAllocationInterface.cpp
		base/TLHAllocationInterface.hpp
		base/TLHAllocationSupport.cpp
		base/TLHAllocationSupport.hpp
		base/Task.cpp
		base/Task.hpp
		base/Validator.cpp
		base/Validator.hpp
		base/VirtualMemory.cpp
		base/VirtualMemory.hpp
		base/WorkPacketOverflow.cpp
		base/WorkPacketOverflow.hpp
		base/WorkPackets.cpp
		base/WorkPackets.hpp
		base/WorkStack.cpp
		base/WorkStack.hpp
		base/ZOSLinkage.cpp
		base/ZOSLinkage.hpp
		base/gcspinlock.cpp
		base/gcutils.cpp
		base/modronapicore.cpp
		base/modronapicore.hpp


		startup/mminitcore.cpp
		startup/omrgcalloc.cpp
		startup/omrgcstartup.cpp

		stats/AllocationFailureStats.cpp
		stats/AllocationStats.cpp
		stats/CardCleaningStats.cpp
		stats/ClassUnloadStats.cpp
		stats/CompactStats.cpp
		stats/ConcurrentCardTableStats.cpp
		stats/ConcurrentGCStats.cpp
		stats/ConcurrentSweepStats.cpp
		stats/CopyForwardStatsCore.cpp
		stats/HeapMemorySnapshot.cpp
		stats/HeapResizeStats.cpp
		stats/HeapStats.cpp
		stats/LargeObjectAllocateStats.cpp
		stats/MarkStats.cpp
		stats/MetronomeStats.cpp
		stats/PercolateStats.cpp
		stats/RootScannerStats.cpp
		stats/ScavengerCopyScanRatio.cpp
		stats/ScavengerHotFieldStats.cpp
		stats/ScavengerStats.cpp
		stats/SweepStats.cpp

		structs/ForwardedHeader.cpp
		structs/HashTableIterator.cpp
		structs/ObjectHeapIterator.cpp
		structs/ObjectIteratorState.cpp
		structs/OMRVMThreadListIterator.cpp
		structs/PoolIterator.cpp
		structs/SublistFragment.cpp
		structs/SublistIterator.cpp
		structs/SublistPool.cpp
		structs/SublistPuddle.cpp
		structs/SublistSlotIterator.cpp

		#verbose/j9vgc.tdf
		verbose/VerboseBuffer.cpp
		verbose/VerboseHandlerOutput.cpp
		verbose/VerboseManager.cpp
		verbose/VerboseWriterChain.cpp
		verbose/VerboseWriter.cpp
		verbose/VerboseWriterFileLoggingBuffered.cpp
		verbose/VerboseWriterFileLogging.cpp
		verbose/VerboseWriterFileLoggingSynchronous.cpp
		verbose/VerboseWriterHook.cpp
		verbose/VerboseWriterStreamOutput.cpp

		verbose/handler_standard/VerboseHandlerOutputStandard.cpp
		#hookgen generated files
		${CMAKE_CURRENT_SOURCE_DIR}/base/mmprivatehook.h
		${CMAKE_CURRENT_SOURCE_DIR}/base/mmprivatehook_internal.h
		${CMAKE_CURRENT_SOURCE_DIR}/../include_core/mmomrhook.h
		${CMAKE_CURRENT_SOURCE_DIR}/base/mmomrhook_internal.h
		#tracegen files
		ut_j9mm.c
		ut_omrmm.c
		ut_j9vgc.c
)




target_include_directories(omrgc
	PUBLIC
		.
		${CMAKE_CURRENT_BINARY_DIR}  #Ideally this should be private, but the glue pulls this in
		base
		base/segregated
		base/standard
		include
		startup
		stats
		structs
		verbose
		verbose/handler_standard
		$<TARGET_PROPERTY:omrglue,INTERFACE_INCLUDE_DIRECTORIES>
	PRIVATE
)

target_link_libraries(omrgc
	PUBLIC
		# TODO: omrcore
		#omrglue
)
